# MLOps_CPS_Kubeflow

./: .env  .gitignore  .pdm-python  Dockerfile  application.py  kubeflow-pipeline.py  kubernetes_deployment.yaml  main.py  mlops_pipeline.yaml  pyproject.toml
.github/workflows/: cicd.yaml
artifacts/models/: model.pkl
src/: data_preprocessing.py  exception.py  logger.py  model_training.py  model_tunning.py
templates/: index.html
