[project]
name = "mlops-cps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdm>=2.25.9",
    "scikit-learn>=1.7.2",
    "mlflow<3,>2",
    "dagshub>=0.6.3",
    "dvc>=3.63.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.6",
    "kfp>=2.14.3",
    "Flask>=3.1.2",
    "hyperopt>=0.2.7",
    "optuna>=4.5.0",
]

[tool.pdm.build]
package-dir='.'

[build.system]
requires=["pdm.backend","pdm-build-locked"]
build-backend="pdm.backend"

[tool.pdm]
distribution=true